# vplotter

./: CMakeLists.txt  Geometry.cpp  Geometry.h  Machine.cpp  Machine.h  README.md  gcode.l  lex.xx.cc  main.cpp  test.nc  test.ngc
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
